Fixed margin to better align the grid.

--- a/css/desktop-style.css
+++ b/css/desktop-style.css
@@ -31,6 +31,7 @@
 
 
     .main-visualiser {
+        margin-top: 8rem;
         grid-auto-flow: column;
         gap: 2rem;
         grid-template-columns: 1fr 80%;
